--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
+    "toast": "^0.5.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
